<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalExam-2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="convert_str">Convert</string>
    <string name="from">From</string>
    <string name="far_string">Fahrenheit</string>
    <string name="cel_str">Celsius</string>
    <string name="kev_str">Kelvin</string>
    <string name="to_str">To</string>
    <string name="convert_btn">Convert</string>

</resources>
